--- a/harjoitustyo/Login.css
+++ b/harjoitustyo/Login.css
@@ -1,84 +1,91 @@
-/* Elegant Aero */
-.elegant-aero {
-    margin-left:auto;
-    margin-right:auto;
-
+/* #### Dark Matter #### */
+.dark-matter {
+    margin-left: auto;
+    margin-right: auto;
     max-width: 500px;
-    background: #D2E9FF;
-    padding: 20px 20px 20px 20px;
-    font: 12px Arial, Helvetica, sans-serif;
-    color: #666;
+    background: #555;
+    padding: 20px 30px 20px 30px;
+    font: 12px "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: #D3D3D3;
+    text-shadow: 1px 1px 1px #444;
+    border: none;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
 }
-.elegant-aero h1 {
-    font: 24px "Trebuchet MS", Arial, Helvetica, sans-serif;
-    padding: 10px 10px 10px 20px;
+.dark-matter h1 {
+    padding: 0px 0px 10px 40px;
     display: block;
-    background: #C0E1FF;
-    border-bottom: 1px solid #B8DDFF;
-    margin: -20px -20px 15px;
+    border-bottom: 1px solid #444;
+    margin: -10px -30px 30px -30px;
 }
-.elegant-aero h1>span {
+.dark-matter h1>span {
     display: block;
     font-size: 11px;
 }
-
-.elegant-aero label>span {
-    float: left;
-    margin-top: 10px;
-    color: #5E5E5E;
-}
-.elegant-aero label {
+.dark-matter label {
     display: block;
     margin: 0px 0px 5px;
 }
-.elegant-aero label>span {
+.dark-matter label>span {
     float: left;
     width: 20%;
     text-align: right;
-    padding-right: 15px;
+    padding-right: 10px;
     margin-top: 10px;
     font-weight: bold;
 }
-.elegant-aero input[type="text"], .elegant-aero input[type="email"], .elegant-aero textarea, .elegant-aero select {
-    color: #888;
-    width: 70%;
-    padding: 0px 0px 0px 5px;
-    border: 1px solid #C5E2FF;
-    background: #FBFBFB;
-    outline: 0;
-    -webkit-box-shadow:inset 0px 1px 6px #ECF3F5;
-    box-shadow: inset 0px 1px 6px #ECF3F5;
-    font: 200 12px/25px Arial, Helvetica, sans-serif;
-    height: 30px;
+.dark-matter input[type="text"],input[type="password"], .dark-matter input[type="email"], .dark-matter textarea, .dark-matter select {
+    border: none;
+    color: #525252;
+    height: 25px;
     line-height:15px;
-    margin: 2px 6px 16px 0px;
+    margin-bottom: 16px;
+    margin-right: 6px;
+    margin-top: 2px;
+    outline: 0 none;
+    padding: 5px 0px 5px 5px;
+    width: 70%;
+    border-radius: 2px;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    background: #DFDFDF;
 }
-.elegant-aero textarea{
+.dark-matter select {
+    background: #DFDFDF url('down-arrow.png') no-repeat right;
+    background: #DFDFDF url('down-arrow.png') no-repeat right;
+    appearance:none;
+    -webkit-appearance:none; 
+    -moz-appearance: none;
+    text-indent: 0.01px;
+    text-overflow: '';
+    width: 70%;
+    height: 35px;
+    color: #525252;
+    line-height: 25px;
+}
+.dark-matter textarea{
     height:100px;
     padding: 5px 0px 0px 5px;
     width: 70%;
 }
-.elegant-aero select {
-    background: #fbfbfb url('down-arrow.png') no-repeat right;
-    background: #fbfbfb url('down-arrow.png') no-repeat right;
-   appearance:none;
-    -webkit-appearance:none; 
-   -moz-appearance: none;
-    text-indent: 0.01px;
-    text-overflow: '';
-    width: 70%;
-}
-.elegant-aero .button{
-    padding: 10px 30px 10px 30px;
-    background: #66C1E4;
+.dark-matter .button {
+    background: #FFCC02;
     border: none;
-    color: #FFF;
-    box-shadow: 1px 1px 1px #4C6E91;
-    -webkit-box-shadow: 1px 1px 1px #4C6E91;
-    -moz-box-shadow: 1px 1px 1px #4C6E91;
-    text-shadow: 1px 1px 1px #5079A3;
-    
+    padding: 10px 25px 10px 25px;
+    color: #585858;
+    border-radius: 4px;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    text-shadow: 1px 1px 1px #FFE477;
+    font-weight: bold;
+    box-shadow: 1px 1px 1px #3D3D3D;
+    -webkit-box-shadow:1px 1px 1px #3D3D3D;
+    -moz-box-shadow:1px 1px 1px #3D3D3D;
 }
-.elegant-aero .button:hover{
-    background: #3EB1DD;
+
+.dark-matter .button:hover {
+    color: #333;
+    background-color: #EBEBEB;
 }
